Updated incorrect bib entry

--- a/biblio.bib
+++ b/biblio.bib
@@ -93,7 +93,7 @@ author={Wikipedia}
 	year = {2009}
 },
 
-@inproceedings{stone:takeover,
+@inproceedings{stone:p2p,
     address = {San Fransisco, California},
     title = {SoK: P2PWNED - Modeling and Evaluating the Resilience of Peer-to-Peer Botnets},
     booktitle = {2013 IEEE Symposium on Security and Privacy},
