--- a/biblio.bib
+++ b/biblio.bib
@@ -89,7 +89,7 @@ author={Wikipedia}
 	title = {Your Botnet is My Botnet: Analysis of a Botnet Takeover},
 	booktitle = {16th {ACM} Conference on Computer and Communications Security},
 	author = {Stone-Gross, Brett and Cova, Marco and Lorenzo, Cavallaro and Gilbert, Bob and Szydlowski, Martin and Kemmerer, Richard and Kruegel, Christopher and Vigna, Giovanni},
-	month = nov,
+	month = {nov},
 	year = {2009}
 },
 
@@ -111,6 +111,54 @@ author={Wikipedia}
     pages={1-8},
     keywords={Internet;peer-to-peer computing;protocols;telecommunication security;Internet;P2P protocols;centralized command and control;communication protocols;computers network;index poisoning technique;peer-to-peer botnets;sybil attack;Command and control systems;Computer architecture;Computer networks;Counting circuits;Internet;Network servers;Peer to peer computing;Performance analysis;Protocols;Web server},
     doi={10.1109/ICCCN.2009.5235360},
-    ISSN={1095-2055},
+    ISSN={1095-2055}
+},
+
+@INPROCEEDINGS{govil:criminology,
+	author={Jivesh Govil and Jivika Govil},
+	booktitle={Electro/Information Technology, 2007 IEEE International Conference on},
+	title={Criminology of BotNets and their detection and defense methods},
+	year={2007},
+	month={May},
+	pages={215-220},
+	keywords={Internet;computer crime;invasive software;software agents;BotNet criminology detection;BotNet defense method;Internet malware epidemic;software robot;Automatic control;Centralized control;Computer networks;Computer science;IP networks;Internet;Protocols;Relays;Robotics and automation;USA Councils;Bot;BotNet;IRC;Malware},
+	doi={10.1109/EIT.2007.4374517},
 }
 
+@incollection{barford:book,
+	year={2007},
+	isbn={978-0-387-32720-4},
+	booktitle={Malware Detection},
+	volume={27},
+	series={Advances in Information Security},
+	editor={Christodorescu, Mihai and Jha, Somesh and Maughan, Douglas and Song, Dawn and Wang, Cliff},
+	doi={10.1007/978-0-387-44599-1_8},
+	title={An Inside Look at Botnets},
+	url={http://dx.doi.org/10.1007/978-0-387-44599-1_8},
+	publisher={Springer US},
+	author={Barford, Paul and Yegneswaran, Vinod},
+	pages={171-191},
+	language={English}
+}
+
+@article{ollmann:topology,
+  title={Botnet communication topologies},
+  author={Ollmann, Gunter},
+  journal={Retrieved September},
+  volume={30},
+  pages={2009},
+  year={2009}
+}
+
+@article{ollmann:evasion,
+	title={Serial Variant Evasion Tactics},
+	author={Ollman, Gunter}
+}
+
+@ONLINE{honeynet:appendix,
+  title={Using honeynets to learn more about bots},
+  author={Paul B\"{a}cher and Thorsten Holz and Markus K\"{o}tter and Georg Wicherski},
+  publisher={The Honeynet Project},
+  year={2008},
+  url={http://honeynet.org/papers/bots}
+}
