--- a/main.tex
+++ b/main.tex
@@ -151,7 +151,7 @@ Once data has been collected by bots, the process of exfiltrating the data back 
 
 Contemporary botnets like ZeroAccess, MinerBot, Zeus, and Storm have adopted hybridized network structures in an effort to combine the resilience of peer-to-peer networks with the controllability of centralized servers.  Centralized servers are easy to construct, but have a single point of weakness: the command and control server itself \cite{wang:p2p}.  The nature of the network topology is surprisingly similar between peer-to-peer botnets;  ~\ref{fig:p2p-architecture} outlines the topology of peer-to-peer networks found in the likes of botnets such as ZeroAccess, MinerBot, Zeus, Storm, Conflicker, and Kelihos.
 
-\begin{figure*}[hbt]
+\begin{figure*}[hbt]\centering
 \includegraphics[width=0.9\textwidth]{p2p-architecture.png}
 \caption{Peer-to-Peer Botnet Topology}
 \label{fig:p2p-architecture}
