Added zeus p2p protocol blurb

--- a/biblio.bib
+++ b/biblio.bib
@@ -162,3 +162,12 @@ author={Wikipedia}
   year={2008},
   url={http://honeynet.org/papers/bots}
 }
+
+@techreport{zeus:protocol,
+    title={An Analysis of the Zeus Peer-to-Peer Protocol},
+    author={Dennis Andriesse, Herbert Bos},
+    institution={VU University Amsterdam, The Netherlands},
+    year={2014},
+    month={apr},
+    number={IR-CS-74}
+}
