fixed up the bibliography and made some edits to the tex

--- a/biblio.bib
+++ b/biblio.bib
@@ -55,7 +55,7 @@ title={Phishing},
 author={Wikipedia}
 },
 
-@OLNINE{wikipedia:trojan,
+@ONLINE{wikipedia:trojan,
 url={http://en.wikipedia.org/wiki/Trojan_horse_%28computing%29},
 title={Trojan horse (computing)},
 author={Wikipedia}
@@ -93,14 +93,16 @@ author={Wikipedia}
 	year = {2009}
 },
 
-@inproceedings{stone:p2p,
-    address = {San Fransisco, California},
-    title = {SoK: P2PWNED - Modeling and Evaluating the Resilience of Peer-to-Peer Botnets},
-    booktitle = {2013 IEEE Symposium on Security and Privacy},
-    author = {Rossow, Andriesse, Werner, Stone-Gross, Plohmann, Dietrich, Bos},
-    year = {2013}
-},
-
+@INPROCEEDINGS{stone:p2p,
+author={Rossow, C. and Andriesse, D. and Werner, T. and Stone-Gross, B. and Plohmann, D. and Dietrich, C.J. and Bos, H.},
+booktitle={Security and Privacy (SP), 2013 IEEE Symposium on},
+title={SoK: P2PWNED - Modeling and Evaluating the Resilience of Peer-to-Peer Botnets},
+year={2013},
+month={May},
+pages={97-111},
+keywords={computer network security;peer-to-peer computing;P2PWNED;SoK;active P2P botnets;botnet operators;centralized botnets;computer security researchers;formal graph model;intrinsic properties;law enforcement;mitigation strategies;node enumeration;node poisoning;peer-to-peer infrastructures},
+doi={10.1109/SP.2013.17},
+ISSN={1081-6011},}
 
 @INPROCEEDINGS{wang:p2p,
     author={Ping Wang and Lei Wu and Aslam, B. and Zou, C.C.},
