Added more bib entries

--- a/biblio.bib
+++ b/biblio.bib
@@ -191,3 +191,35 @@ pages={83-86},
 keywords={Internet;client-server systems;security of data;telecommunication traffic;transport protocols;DNS traffic;HTTP clients;HTTP servers;IRC botnets;Internet society;malicious HTTP-based botnets;Computer crime;Computer security;Costs;History;Information analysis;Information security;Internet;National security;Peer to peer computing;Web server;HTTP botnet;bot;botnet;cyber terror;cyber terrorism},
 doi={10.1109/SecTech.2008.52},
 }
+
+@inproceedings{caballero:dispatcher,
+ author = {Caballero, Juan and Poosankam, Pongsin and Kreibich, Christian and Song, Dawn},
+ title = {Dispatcher: Enabling Active Botnet Infiltration Using Automatic Protocol Reverse-engineering},
+ booktitle = {Proceedings of the 16th ACM Conference on Computer and Communications Security},
+ series = {CCS '09},
+ year = {2009},
+ isbn = {978-1-60558-894-0},
+ location = {Chicago, Illinois, USA},
+ pages = {621--634},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1653662.1653737},
+ doi = {10.1145/1653662.1653737},
+ acmid = {1653737},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {binary analysis, botnet infiltration, protocol reverse engineering},
+} 
+
+@inproceedings{gu:botminer,
+  title={BotMiner: Clustering Analysis of Network Traffic for Protocol-and Structure-Independent Botnet Detection.},
+  author={Gu, Guofei and Perdisci, Roberto and Zhang, Junjie and Lee, Wenke and others},
+  booktitle={USENIX Security Symposium},
+  pages={139--154},
+  year={2008}
+}
+
+@article{gu:botsniffer,
+  title={BotSniffer: Detecting botnet command and control channels in network traffic},
+  author={Gu, Guofei and Zhang, Junjie and Lee, Wenke},
+  year={2008}
+}
