Added some papers and updated bibliography

--- a/biblio.bib
+++ b/biblio.bib
@@ -223,3 +223,24 @@ doi={10.1109/SecTech.2008.52},
   author={Gu, Guofei and Zhang, Junjie and Lee, Wenke},
   year={2008}
 }
+
+@INPROCEEDINGS{cooke:survey,
+author={Bailey, M. and Cooke, E. and Jahanian, F. and Yunjing Xu and Karir, M.},
+booktitle={Conference For Homeland Security, 2009. CATCH '09. Cybersecurity Applications Technology},
+title={A Survey of Botnet Technology and Defenses},
+year={2009},
+month={March},
+pages={299-304},
+keywords={Internet;security of data;Botnet technology;botnet defense;global Internet threats;Computer crime;Computer security;Computer worms;Educational institutions;Floods;Government;Home computing;Internet;Paper technology;Terrorism;Botnet;detection;mitigation},
+doi={10.1109/CATCH.2009.40},}
+
+@INPROCEEDINGS{li:survey,
+author={Chao Li and Wei Jiang and Xin Zou},
+booktitle={Innovative Computing, Information and Control (ICICIC), 2009 Fourth International Conference on},
+title={Botnet: Survey and Case Study},
+year={2009},
+month={Dec},
+pages={1184-1187},
+keywords={Internet;security of data;software tools;IRC-based SpyBot;botnet detection;communication protocols;control system;Chaotic communication;Command and control systems;Computer networks;Computer worms;Control systems;Electronic mail;Information security;Internet;Peer to peer computing;Protocols},
+doi={10.1109/ICICIC.2009.127},}
+
