--- a/biblio.bib
+++ b/biblio.bib
@@ -244,3 +244,10 @@ pages={1184-1187},
 keywords={Internet;security of data;software tools;IRC-based SpyBot;botnet detection;communication protocols;control system;Chaotic communication;Command and control systems;Computer networks;Computer worms;Control systems;Electronic mail;Information security;Internet;Peer to peer computing;Protocols},
 doi={10.1109/ICICIC.2009.127},}
 
+@ONLINE{darkreading:tor,
+	url={http://www.darkreading.com/attacks-breaches/how-the-massive-tor-botnet-failed/d/d-id/1140458},
+	author={Dark Reading},
+	title={How The Massibe Tor Botnet 'Failed'},
+	month={September},
+	year={2013}
+}
