Added botnet:metrics and damballa:tor; feily:detection==feily:survey

--- a/biblio.bib
+++ b/biblio.bib
@@ -174,6 +174,16 @@ ISSN={1081-6011},}
     number={IR-CS-74}
 }
 
+@techreport{tor:damballa,
+    title={How the Massive Tor Botnet Failed},
+    url={https://blog.damballa.com/archives/tag/lazyalienbikers},
+    author={Mark Gilbert},
+    institution={Damballa},
+    year={2013},
+    month={sept}
+}
+
+
 @ONLINE{rdg:crypter,
 	url={http://rdgsoft.net/tejon.php},
 	title={RDG Tejon Crypter},
@@ -209,6 +219,20 @@ doi={10.1109/SecTech.2008.52},
  address = {New York, NY, USA},
  keywords = {binary analysis, botnet infiltration, protocol reverse engineering},
 } 
+
+@INPROCEEDINGS{botnet:metrics,
+author={Dagon, D. and Guofei Gu and Lee, C.P. and Wenke Lee},
+booktitle={Computer Security Applications Conference, 2007. ACSAC 2007. Twenty-Third Annual},
+title={A Taxonomy of Botnet Structures},
+year={2007},
+month={Dec},
+pages={325-339},
+keywords={computer viruses;graph theory;peer-to-peer computing;P2P network;botmaster;botnet structures;general remediation strategy;performance metrics;random graph botnets;response techniques;scale free botnets;taxonomy;Application software;Bandwidth;Computer security;Costs;Degradation;Measurement;Network topology;Performance evaluation;Robustness;Taxonomy},
+doi={10.1109/ACSAC.2007.44},
+ISSN={1063-9527},
+}
+
+
 
 @inproceedings{gu:botminer,
   title={BotMiner: Clustering Analysis of Network Traffic for Protocol-and Structure-Independent Botnet Detection.},
