--- a/main.tex
+++ b/main.tex
@@ -13,12 +13,14 @@
 % ---------------------------------------------------------------------------------------------------------------
 
 \documentclass{acm_proc_article-sp}
-%\usepackage{biblatex}
-%\bibliography{biblio}
-\usepackage[backend=biber,style=numeric]{biblatex}
-\addbibresource{biblio.bib}
-\addbibresource{Papers/SECURWARE/securware.bib}
-\addbibresource{Papers/IMC -  Internet Measurement Conference/imc.bib}
+\usepackage{biblatex}
+\bibliography{biblio}
+\bibliography{Papers/SECURWARE/securware}
+%\bibliography{Papers/IMC -  Internet Measurement Conference/imc}
+%\usepackage[backend=biber,style=numeric]{biblatex}
+%\addbibresource{biblio.bib}
+%\addbibresource{Papers/SECURWARE/securware.bib}
+%\addbibresource{Papers/IMC -  Internet Measurement Conference/imc.bib}
 
 \begin{document}
 
