pre commit to conflict

--- a/biblio.bib
+++ b/biblio.bib
@@ -174,7 +174,7 @@ ISSN={1081-6011},}
     number={IR-CS-74}
 }
 
-@techreport{tor:damballa,
+@techreport{damballa:tor,
     title={How the Massive Tor Botnet Failed},
     url={https://blog.damballa.com/archives/tag/lazyalienbikers},
     author={Mark Gilbert},
