Added citation for sality scan.

--- a/biblio.bib
+++ b/biblio.bib
@@ -282,3 +282,21 @@ doi={10.1109/ICICIC.2009.127},}
 	month={September},
 	year={2013}
 }
+
+@inproceedings{sality:scan,
+ author = {Dainotti, Alberto and King, Alistair and Claffy, kc and Papale, Ferdinando and Pescap\`{e}, Antonio},
+  title = {Analysis of a "/0" Stealth Scan from a Botnet},
+   booktitle = {Proceedings of the 2012 ACM Conference on Internet Measurement Conference},
+    series = {IMC '12},
+     year = {2012},
+      isbn = {978-1-4503-1705-4},
+       location = {Boston, Massachusetts, USA},
+        pages = {1--14},
+         numpages = {14},
+          url = {http://doi.acm.org/10.1145/2398776.2398778},
+           doi = {10.1145/2398776.2398778},
+            acmid = {2398778},
+             publisher = {ACM},
+              address = {New York, NY, USA},
+               keywords = {bot, botnet, coordination, covert, darknet, internet background radiation, network telescope, probing, sality, scan, sip, stealth, voip},
+} 
