Edited some bib entries to avoid overfull hboxes

--- a/biblio.bib
+++ b/biblio.bib
@@ -195,7 +195,7 @@ ISSN={1081-6011},}
 	url={http://rdgsoft.net/tejon.php},
 	title={RDG Tejon Crypter},
 	year={2014},
-	month={April}
+	month={Retrieved: April}
 }
 
 @INPROCEEDINGS{botnet:history,
@@ -232,7 +232,6 @@ author={Dagon, D. and Guofei Gu and Lee, C.P. and Wenke Lee},
 booktitle={Computer Security Applications Conference, 2007. ACSAC 2007. Twenty-Third Annual},
 title={A Taxonomy of Botnet Structures},
 year={2007},
-month={Dec},
 pages={325-339},
 keywords={computer viruses;graph theory;peer-to-peer computing;P2P network;botmaster;botnet structures;general remediation strategy;performance metrics;random graph botnets;response techniques;scale free botnets;taxonomy;Application software;Bandwidth;Computer security;Costs;Degradation;Measurement;Network topology;Performance evaluation;Robustness;Taxonomy},
 doi={10.1109/ACSAC.2007.44},
@@ -242,7 +241,7 @@ ISSN={1063-9527},
 
 
 @inproceedings{gu:botminer,
-  title={BotMiner: Clustering Analysis of Network Traffic for Protocol-and Structure-Independent Botnet Detection.},
+  title={BotMiner: Clustering Analysis of Network Traffic for Protocol and Structure Independent Botnet Detection.},
   author={Gu, Guofei and Perdisci, Roberto and Zhang, Junjie and Lee, Wenke and others},
   booktitle={USENIX Security Symposium},
   pages={139--154},
