--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 
 \begin{document}
 
-\title{Investing the Security Features of Botnets}
+\title{Investigating the Security Features of Botnets}
 \subtitle{CPSC 526 Final Report \\ Tutorial Section: T02}
 \date{\today}
 \numberofauthors{3}
